# rust-react

./: Cargo.toml  LICENSE_MIT
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  index.js
src/: lib.rs  main.rs
